# guile-sample

./: .gitignore  .gitmodules  Makefile.am  Makefile.bak  README.org  configure.ac  example.sh
guile/: guile-2.2.scm  guile-3.0.scm  guile-linux-syscalls.patch  guile-relocatable-next.patch
src/: hello.scm  hello.scm.h  simple-guile.c
